2012-03-14 Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: added lost lines.

2012-03-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: fixes and changes for to show better the
	html reports.

	* include/functions_groups.php: cleaned source code. 

	* include/functions.php: fixed and changed the function "string2image" to
	create the text with any size and use ttf font.

2012-03-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: fixed into function
	"pch_slicebar_graph" unset var $antialias.

2012-03-14  Junichi Satoh  <junichi@rworks.jp>

	* operation/incidents/incident.php: Merged from trunk. Replaced
	substr() with ui_print_truncate_text().

2012-03-13 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/reporting/reporting_viewer.php,
	godmode/reporting/reporting_builder.preview.php: added the enterprise
	posibility to generate PDF from this report. And added the posibility to go
	to edit the report from this page. Finally fixed the hidden first row of
	form, now show again the check to select method to calculate and the title
	and other things.

	* godmode/reporting/reporting_builder.item_editor.php: added button near to
	the list custom graph to create or edit the custom grap selected.
	
	Merged from the trunk.

2012-03-13 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixed the show value in the
	item simple value, now show formated and with units.

	Merged from the trunk.

2012-03-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php: Non-init modules count was bad 
	because normal module are counted also.
	
	Merged bugfix from trunk.

2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/menu.php: revert changes. I am sorry.

2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,